<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/checkboxes"
    android:orientation="vertical"
    android:layout_gravity="center"
    >
    <CheckBox
        android:id="@+id/checkbox1"
        android:text="@string/task_1"
        android:layout_width="wrap_content"
        android:layout_gravity="center"/>
    <CheckBox
        android:id="@+id/checkbox2"
        android:text="@string/task_2"
        android:layout_width="wrap_content"
        android:layout_gravity="center"/>
    <CheckBox
        android:id="@+id/checkbox3"
        android:text="@string/task_3"
        android:layout_width="wrap_content"
        android:layout_gravity="center"/>

</TableRow>